--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
     "react": "^18.1.0",
+    "react-animate-on-scroll": "^2.1.5",
+    "react-animated-cursor": "^2.4.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.3.1",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
